Bug 1950085 - Handle offset surfaces in DrawTargetWebgl::DrawSurface. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D239393